--- a/public/config.json
+++ b/public/config.json
@@ -3,8 +3,8 @@
   "docBase": "http://docs.cloudstack.apache.org/en/latest",
   "appTitle": "CloudStack",
   "footer": "Licensed under the <a href='http://www.apache.org/licenses/' target='_blank'>Apache License</a>, Version 2.0.",
-  "logo": "assets/logo.svg",
-  "banner": "assets/banner.svg",
+  "logo": "assets/logo.png",
+  "banner": "assets/banner.png",
   "error": {
     "404": "assets/404.png",
     "403": "assets/403.png",
@@ -34,8 +34,11 @@
     "@box-shadow-base": "0 2px 8px rgba(0, 0, 0, 0.15)",
     "@logo-width": "256px",
     "@logo-height": "64px",
-    "@banner-width": "700px",
+    "@banner-width": "350px",
     "@banner-height": "110px",
+    "@banner-position": "absolute",
+    "@banner-left": "100px",
+    "@banner-top": "50px",
     "@error-width": "256px",
     "@error-height": "256px"
   },
