--- a/public/config.json
+++ b/public/config.json
@@ -2,7 +2,7 @@
   "apiBase": "/client/api",
   "docBase": "http://docs.cloudstack.apache.org/en/latest",
   "appTitle": "CloudStack",
-  "footer": "Licensed under the <a href='http://www.apache.org/licenses/' target='_blank'>Apache License</a>, Version 2.0.",
+  "footer": "",
   "logo": "assets/logo.png",
   "banner": "assets/banner.png",
   "error": {
